<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="title">Constanța</string>
    <string name="restaurants">Restaurants</string>
    <string name="parks">Parks</string>
    <string name="attractions">Attractions</string>
    <string name="hotels">Hotels</string>
    <string name="transportation">Transportation</string>
    <string name="route">Route</string>

    <string name="seeRoute">See route</string>
    <string name="getLocation">Get location</string>

    <string name="attraction_mamaia_beach">Mamaia Beach</string>
    <string name="latitude_mamaia_beach">44.279085</string>
    <string name="longitude_mamaia_beach">28.621983</string>
    <string name="attraction_cazino">Cazino</string>
    <string name="latitude_cazino">44.170480</string>
    <string name="longitude_cazino">28.663553</string>
    <string name="attraction_the_mosque">The Mosque</string>
    <string name="latitude_the_mosque">44.173283</string>
    <string name="longitude_the_mosque">28.6596882707</string>
    <string name="attraction_tomis_harbour">Tomis Harbour</string>
    <string name="latitude_tomis_harbour">44.175557</string>
    <string name="longitude_tomis_harbour">28.661223</string>
    <string name="attraction_ovidiu_square">Ovidiu Square</string>
    <string name="latitude_ovidiu_square">44.174217</string>
    <string name="longitude_ovidiu_square">28.658076</string>
    <string name="attraction_cathedral">Saint Paul and Peter Cathedral</string>
    <string name="latitude_cathedral">44.171234</string>
    <string name="longitude_cathedral">28.660967</string>

    <string name="hotel_jolie">Hotel Jolie</string>
    <string name="number_jolie">0241 697 638</string>
    <string name="latitude_jolie">44.201298</string>
    <string name="longitude_jolie">28.645268</string>
    <string name="hotel_royal">Hotel Royal</string>
    <string name="number_royal">0241 542 690</string>
    <string name="latitude_royal">44.199137</string>
    <string name="longitude_royal">28.646769</string>
    <string name="hotel_maryiotis">Hotel Maryiotis</string>
    <string name="number_maryiotis">0241 629 999</string>
    <string name="latitude_maryiotis">44.202337</string>
    <string name="longitude_maryiotis">28.645476</string>
    <string name="hotel_golden_rose">Hotel Golden Rose</string>
    <string name="number_golden_rose">0341 445 302</string>
    <string name="latitude_golden_rose">44.203958</string>
    <string name="longitude_golden_rose">28.642707</string>
    <string name="hotel_ibis">Hotel Ibis</string>
    <string name="number_ibis">0241 508 050</string>
    <string name="latitude_ibis">44.177633</string>
    <string name="longitude_ibis">28.654693</string>
    <string name="hotel_austin">Hotel Austin</string>
    <string name="number_austin">0735 844 882</string>
    <string name="latitude_austin">44.212075</string>
    <string name="longitude_austin">28.620630</string>
    <string name="hotel_havana">Hotel Havana</string>
    <string name="number_havana">0721 123 424</string>
    <string name="latitude_havana">44.180788</string>
    <string name="longitude_havana">28.640530</string>

    <string name="park_tabacarie">Tabacarie</string>
    <string name="latitude_tabacarie">44.210532</string>
    <string name="longitude_tabacarie">28.631517</string>
    <string name="park_gara">Gara</string>
    <string name="latitude_gara">44.168921</string>
    <string name="longitude_gara">28.635632</string>
    <string name="park_primarie">Primarie</string>
    <string name="latitude_primarie">44.176344</string>
    <string name="longitude_primarie">28.650396</string>
    <string name="park_poarta">Poarta 6</string>
    <string name="latitude_poarta">44.139469</string>
    <string name="longitude_poarta">28.631380</string>
    <string name="park_opera">Opera</string>
    <string name="latitude_opera">44.181090</string>
    <string name="longitude_opera">28.649657</string>

    <string name="rest_marco_polo">Marco Polo</string>
    <string name="number_marco_polo">0241 617 357</string>
    <string name="latitude_marco_polo">44.182493</string>
    <string name="longitude_marco_polo">28.649354</string>
    <string name="rest_irish">Iriah Pub</string>
    <string name="number_irish">0241 550 400</string>
    <string name="latitude_irish">44.181051</string>
    <string name="longitude_irish">28.652222</string>
    <string name="rest_toscana">Toscana</string>
    <string name="number_toscana">0241 616 360</string>
    <string name="latitude_toscana">44.182873</string>
    <string name="longitude_toscana">28.649179</string>
    <string name="rest_chevalet">Chevalet</string>
    <string name="number_chevalet">0721 421 501</string>
    <string name="latitude_chevalet">44.264257</string>
    <string name="longitude_chevalet">28.620457</string>
    <string name="rest_pizzico">Pizzico</string>
    <string name="number_pizzico">0241 615 555</string>
    <string name="latitude_pizzico">44.174367</string>
    <string name="longitude_pizzico">28.658540</string>
    <string name="rest_london">London Pub</string>
    <string name="number_london">0341 417 190</string>
    <string name="latitude_london">44.177793</string>
    <string name="longitude_london">28.653477</string>
    <string name="rest_crazy">Crazy</string>
    <string name="number_crazy">0726 779 292</string>
    <string name="latitude_crazy">44.182251</string>
    <string name="longitude_crazy">28.649841</string>
    <string name="rest_dolce">La Dolce Vita</string>
    <string name="number_dolce">0241 547 740</string>
    <string name="latitude_dolce">44.208699</string>
    <string name="longitude_dolce">28.642968</string>
    <string name="rest_integra">Integra</string>
    <string name="number_integra">0241 691 973</string>
    <string name="latitude_integra">44.202167</string>
    <string name="longitude_integra">28.628053</string>
    <string name="rest_scoica">La Scoica</string>
    <string name="number_scoica">0727 726 422</string>
    <string name="latitude_scoica">44.193216</string>
    <string name="longitude_scoica">28.649577</string>

    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="line_3">Line 3</string>
    <string name="line_5">Line 5</string>
    <string name="line_40">Line 40</string>
    <string name="line_42">Line 42</string>
    <string name="line_43">Line 43</string>
    <string name="line_44">Line 44</string>
    <string name="line_48">Line 48</string>
    <string name="line_51">Line 51</string>
    <string name="line_100">Line 100</string>


</resources>
