<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.android.tourguideapp.MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/title" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="3">

        <Space />

        <Button
            android:id="@+id/attractions_button"
            style="@style/button"
            android:text="@string/attractions" />

        <Button
            android:id="@+id/parks_button"
            style="@style/button"
            android:text="@string/parks" />

        <Button
            android:id="@+id/restaurants_button"
            style="@style/button"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/restaurants" />

        <Button
            android:id="@+id/hotels_button"
            style="@style/button"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/hotels" />

        <Button
            android:id="@+id/transportation_button"
            style="@style/button"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:text="@string/transportation" />

    </GridLayout>

</RelativeLayout>
